--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                               <a href="javascript:void(0);">More</a>
                               <div class="content">
                                  <div>
-                                    <h1><span>WE ARE ORION.</span>An independent digital agency</br> that will discover a new world for you.</h1>
+                                    <h1><span><b>WE ARE CAPE & BAY.</b></span>a full service digital marketing agency that specializes in analytics, digital advertising, strategy and consulting.</h1>
                                  </div>
                               </div>
                               <ul id="scene" class="scene" >
